tests/should_fail/use_after_move.fit
resource Token {
    id: TokenId,
    cleanup: revoke_token,
}

fn consume_token(t: Token) -> Token

fn test(t: Token) -> () {
    consume_token(t)
    consume_token(t)
}
